--- a/website/static/main/style.css
+++ b/website/static/main/style.css
@@ -64,3 +64,18 @@ button:hover {
 .auth-button:hover {
     background-color: #0056b3;
 }
+
+.profile-button {
+    position: absolute;
+    top: 10px;
+    right: 100px;
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.profile-button:hover {
+    background-color: #0056b3;
+}
