--- a/website/static/profile/style.css
+++ b/website/static/profile/style.css
@@ -68,3 +68,46 @@ table th:first-child, table td:first-child {
 table th:last-child, table td:last-child {
     border-right: none;
 }
+
+.auth-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.auth-button:hover {
+    background-color: #0056b3;
+}
+
+.profile-button {
+    position: absolute;
+    top: 10px;
+    right: 100px;
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.profile-button:hover {
+    background-color: #0056b3;
+}
+
+.button-container {
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.profile-button, .auth-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
