--- a/website/static/main/style.css
+++ b/website/static/main/style.css
@@ -29,15 +29,7 @@ body {
     margin-right: 10px;
 }
 
-#shortUrl {
-    flex: 1;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-right: 10px;
-}
-
-button {
+.submit-button {
     padding: 10px 20px;
     border: none;
     background-color: #007bff;
@@ -46,7 +38,7 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.submit-button:hover {
     background-color: #0056b3;
 }
 
